First step of proofreading

--- a/Thesis/Bibliography.bib
+++ b/Thesis/Bibliography.bib
@@ -13,6 +13,12 @@
   journal   = "Recommandation of National Institute of Standards and Technology",
 }
 
+@misc{dockerOverVMWare,
+  author       = "Ben Kepes, redactor for Forbes",
+  title        = "Docker Raising Monster Funding Round Because... VMware Disruption",
+  howpublished = "\url{http://www.forbes.com/sites/benkepes/2014/08/06/docker-raising-monster-funding-round-because-vmware-disruption/}",
+}
+
 @conference{livemigration,
   author    = "Christopher, Clark and K. Fraser and S. Hand and J. G. Hansen and E. Jul and C. Limpach and I. Pratt and A. Warfield",
   title     = "Live Migration of Virtual Machines",
