--- a/Thesis/Others/Acknowledgements.tex
+++ b/Thesis/Others/Acknowledgements.tex
@@ -1,7 +1,7 @@
 First and foremost, I must sincerely thank my supervisor Dr Mark Stillwell for
 his advices, useful feedbacks and abovall his sympathy. Motivation and
-concentration wasn't always easy to find, as I'm working professionaly in
-parallele of my study to create a company, but Mark was understading and help
+concentration wasn't always easy to find, as I've been working professionaly in
+parallel of my MSc to fund a company. Mark was understanding and helped
 me to revise my goals for this thesis and to find the energy I needed.
 
 Thank you to Pauline, our course administrator for her good work all over this
@@ -10,9 +10,9 @@ something very important to tie the students of a course together and create
 a good atmosphere.
 
 I am also grateful to Cranfield University for offering me the opportunity to
-study here by offering to me a scolarship. I'd like to thank Stéphane Genaud,
+study here by offering a scolarship to me. I'd like to thank Stéphane Genaud,
 director of the French Engineering School \textbf{ENSIIE}, who invested time to
-create this link betweek the school and Cranfield University.
+create this partnership betweew the school and Cranfield University.
 
 Of course I'm thankful to all the people I've met in Cranfield, with whom I've
 shared my difficulties and my doubts and who reconforted me in the idea that I
