--- a/Thesis/Thesis.tex
+++ b/Thesis/Thesis.tex
@@ -46,7 +46,7 @@
 Signed: Léo Unbekandt\\
 \rule[1em]{25em}{0.5pt}  % This prints a line for the signature
  
-Date:\\
+Date: 18th. August 2014\\
 \rule[1em]{25em}{0.5pt}  % This prints a line to write the date
 }
 \clearpage  % Declaration ended, now start a new page
@@ -144,7 +144,7 @@ are publicly available on GitHub \url{https://github.com/Soulou}
 \label{Bibliography}
 \lhead{\emph{Bibliography}}  % Change the left side page header to "Bibliography"
 \nocite{*}
-\bibliographystyle{unsrtnat}
+\bibliographystyle{IEEEtran}
 \bibliography{Bibliography}
 
 \end{document}  % The End
