Rephrase and proofreading 12 aug

--- a/Thesis/Bibliography.bib
+++ b/Thesis/Bibliography.bib
@@ -68,14 +68,14 @@
 }
 
 @article{statisticalAssignment,
- author = {Mastroianni, Carlo and Meo, Michela and Papuzzo, Giuseppe},
+ author = {Mastroianni Carlo and Meo Michela and Papuzzo Giuseppe},
  title = {Self-economy in Cloud Data Centers: Statistical Assignment and Migration of Virtual Machines},
  booktitle = {Proceedings of the 17th International Conference on Parallel Processing - Volume Part I},
  year = {2011},
 } 
 
 @conference{allocationHybrid,
-  author    = "Ruben Van den Bossche, Kurt Vanmechelen and Jan Broeckhov",
+  author    = "Ruben Van den Bossche and Kurt Vanmechelen and Jan Broeckhov",
   title     = "Cost-Optimal Scheduling in Hybrid IaaS Clouds for Deadline Constrained Workloads",
   booktitle = "3rd International Conference on Cloud Computing",
   year      = "2010",
