--- a/Thesis/Appendices/AppendixB.tex
+++ b/Thesis/Appendices/AppendixB.tex
@@ -90,12 +90,15 @@
 ==================================================
 
 /*
- * This endpoint aims at executing an algorithm of load balancing.
- * The name of the algorithm has to be given in the strategy parameter
- * The containers and the agents nodes resource usage is gathered then normalized,
- * then the algorithm is executed.
- * As a result of the problem solving, a set of migration is applied to move
- * the containers according to the algorithm solution.
+ * This endpoint aims at executing an algorithm
+ * of load balancing. The name of the algorithm
+ * has to be given in the strategy parameter. 
+ * The containers and the agents nodes resource
+ * usage is gathered then normalized, then the 
+ * algorithm is executed. As a result of the
+ * problem solving, a set of migration is applied
+ * to move the containers according to the algorithm
+ * solution.
  */
 // POST /balance
 // Params:
