--- a/Thesis/Appendices/AppendixD.tex
+++ b/Thesis/Appendices/AppendixD.tex
@@ -2,40 +2,49 @@
 \label{app:rel-projects}
 
 \begin{itemize}
-\item{\url{https://github.com/Soulou/msc-thesis-container-balancer-agent}\newline\vspace{1em}
+\item{\url{https://github.com/Soulou/msc-thesis-container-balancer-agent}
+
 The repository contains the code of the agent, which is running on every
 hosting server, monitoring the host and its container in real time.}
 
-\item{\url{https://github.com/Soulou/msc-thesis-container-balancer-controller}\newline\vspace{1em}
+\item{\url{https://github.com/Soulou/msc-thesis-container-balancer-controller}
+
 The controller of the infrastructure which finds the agents through
 \textbf{Consul}. It manages the allocation and the load balancing operations in
 the infrastructure.}
 
-\item{\url{https://github.com/Soulou/msc-thesis-container-balancer-client}\newline\vspace{1em}
+\item{\url{https://github.com/Soulou/msc-thesis-container-balancer-client}
+
 The client is a simple CLI tool to communicate with the controller. Otherwise
 it would be necessary to write the HTTP requests by hand, which is not really
 confortable.}
 
-\item{\url{https://github.com/Soulou/msc-thesis-fibo-http-service}\newline\vspace{1em}
+\item{\url{https://github.com/Soulou/msc-thesis-fibo-http-service}
+
 Webservice generating numbers of the fibonacci sequence. Used as a docker image
 to generate load.}
 
-\item{\url{https://github.com/Soulou/msc-thesis-memory-http-service}\newline\vspace{1em}
+\item{\url{https://github.com/Soulou/msc-thesis-memory-http-service}
+
 Webservice allocating a precise amount of memory during a precise duration,
 used to simulate different kinds of webservices}
 
-\item{\url{https://github.com/Soulou/msc-thesis-cpu-burn}\newline\vspace{1em}
+\item{\url{https://github.com/Soulou/msc-thesis-cpu-burn}
+
 Small software design to use completely a given amount of CPU cores.}
 
-\item{\url{https://github.com/Soulou/msc-thesis-container-cpu-monitor}\newline\vspace{1em}
+\item{\url{https://github.com/Soulou/msc-thesis-container-cpu-monitor}
+
 Tool to generate data about the consumption of each container run by
 \textbf{Docker}.}
 
-\item{\url{https://github.com/Soulou/msc-thesis-cloud-builder}\newline\vspace{1em}
+\item{\url{https://github.com/Soulou/msc-thesis-cloud-builder}
+
 Set of tools designed to deploy VMs automatically in an \textbf{OpenStack}
 environment.}
 
-\item{\url{https://github.com/Soulou/msc-thesis-ansible}\newline\vspace{1em}
+\item{\url{https://github.com/Soulou/msc-thesis-ansible}
+
 \textbf{Ansible playbook to deploy everything required to run the exeperiment
 on the VMs dpeloyed by the Cloud Builder.}}
 \end{itemize}
