--- a/Thesis/Appendices/AppendixC.tex
+++ b/Thesis/Appendices/AppendixC.tex
@@ -104,26 +104,34 @@ Container 192.168.1.3 - 9a2e2b2244 -> 192.168.1.18 - 406d5ce46d
 ./client.py balance [--opt opt1=val1 [--opt opt2=va2 ...]] <algorithm>
 
 ##
-# Run a load balancing or consolidation operation on the complete infrastructure
-# The algorithm can be specified the following are available:
+# Run a load balancing or consolidation
+# operation on the complete infrastructure
+# The algorithm can be specified the following
+# are available:
 #
-# Implemented in the controller : [first-fit-decreasing, best-fit-decreasing]
+# Implemented in the controller
+# [first-fit-decreasing, best-fit-decreasing]
 #
-# Implemented in third-party library [stillwell, gabay2013vsvu, brandao2013mvp]
+# Implemented in third-party library
+# [stillwell, gabay2013vsvu, brandao2013mvp]
 # https://github.com/marklee77/vpack
 #
 # Example
 #
 
-./client.py balance --opt heuristic=bin_centric --opt bin_measure=do_nothing --opt item_measure=do_nothing gabay2014vsvu
+./client.py balance \
+  --opt heuristic=bin_centric \
+  --opt bin_measure=do_nothing \
+  --opt item_measure=do_nothing \
+  gabay2014vsvu
 
 {'bins': [{'capacity': [0.8, 0.8, 0.8],
 	  'remaining_capacity': [1.0, 1.0, 1.0]}, ...],
  'items': [[0.0, 0.0004, 0.0], ...]
  'migrations': [{'Service': 'service2',
-                 'Started': {'Id': '7724621e2dcccb4725d3516a2e48ad1c26bae9a7ff4c21f3cee4438c9c02d164',
+                 'Started': {'Id': '7724621e2dcccb472',
                              'Node': '192.168.114.14'},
-                 'Stopped': {'Id': 'd3f8a1e45481e39458189c194bf7337d204838e5b27ae48916fde742b1bf977f',
+                 'Stopped': {'Id': 'd3f8a1e45481e3945',
 		 'Node': '192.168.114.13'}}, ...],
  'result': {'algo-runtime': 0.00013580999999973642,
             'bincount': 7,
